update by bugleesir

--- a/_posts/2024-8-15-面试学习-MySQL.md
+++ b/_posts/2024-8-15-面试学习-MySQL.md
@@ -92,6 +92,70 @@ title: MySQL
     - [什么是区分度？](#什么是区分度)
     - [MySQL查看字段区分度的命令？](#mysql查看字段区分度的命令)
     - [索引是不是建的越多越好呢？](#索引是不是建的越多越好呢)
+  - [36.为什么 InnoDB 要使用 B+树作为索引？](#36为什么-innodb-要使用-b树作为索引)
+    - [B+树的页是单向链表还是双向链表？如果从大值向小值检索，如何操作？](#b树的页是单向链表还是双向链表如果从大值向小值检索如何操作)
+  - [37.为什么 MongoDB 索引用 B树，而 MySQL 用 B+ 树？](#37为什么-mongodb-索引用-b树而-mysql-用-b-树)
+  - [38.一棵 B+树能存储多少条数据呢？](#38一棵-b树能存储多少条数据呢)
+  - [39.为什么要用 B+ 树，而不用普通二叉树？](#39为什么要用-b-树而不用普通二叉树)
+    - [为什么不用平衡二叉树呢？](#为什么不用平衡二叉树呢)
+  - [40.为什么用 B+ 树而不用 B 树呢？](#40为什么用-b-树而不用-b-树呢)
+  - [41.Hash 索引和 B+ 树索引区别是什么？](#41hash-索引和-b-树索引区别是什么)
+  - [42.MySQL 模糊查询怎么查，什么情况下模糊查询不走索引？](#42mysql-模糊查询怎么查什么情况下模糊查询不走索引)
+  - [43.聚簇索引与非聚簇索引的区别？](#43聚簇索引与非聚簇索引的区别)
+    - [回表了解吗？](#回表了解吗)
+    - [回表记录越多好吗？](#回表记录越多好吗)
+    - [覆盖索引了解吗？](#覆盖索引了解吗)
+  - [44.什么是最左前缀原则？](#44什么是最左前缀原则)
+    - [为什么不从最左开始查，就无法匹配呢？](#为什么不从最左开始查就无法匹配呢)
+  - [45.什么是索引下推优化？](#45什么是索引下推优化)
+  - [46.MySQL 中有哪几种锁，列举一下？](#46mysql-中有哪几种锁列举一下)
+    - [按锁粒度如何划分?](#按锁粒度如何划分)
+    - [按兼容性如何划分?](#按兼容性如何划分)
+    - [按加锁机制如何划分?](#按加锁机制如何划分)
+    - [如何解决库存超卖问题？](#如何解决库存超卖问题)
+    - [全局锁和表级锁了解吗？](#全局锁和表级锁了解吗)
+    - [说说 MySQL 的行锁？](#说说-mysql-的行锁)
+    - [说说 InnoDB 的行锁实现？](#说说-innodb-的行锁实现)
+    - [意向锁是什么知道吗？](#意向锁是什么知道吗)
+  - [47.MySQL 的乐观锁和悲观锁了解吗？](#47mysql-的乐观锁和悲观锁了解吗)
+  - [48.MySQL 遇到过死锁问题吗，你是如何解决的？](#48mysql-遇到过死锁问题吗你是如何解决的)
+  - [49.MySQL 事务的四大特性说一下？](#49mysql-事务的四大特性说一下)
+  - [50.那 ACID 靠什么保证的呢？](#50那-acid-靠什么保证的呢)
+    - [如何保证原子性？](#如何保证原子性)
+    - [如何保证一致性？](#如何保证一致性)
+    - [如何保证隔离性？](#如何保证隔离性)
+    - [如何保证持久性？](#如何保证持久性)
+  - [51.事务的隔离级别有哪些？MySQL 的默认隔离级别是什么？](#51事务的隔离级别有哪些mysql-的默认隔离级别是什么)
+    - [A 事务未提交，B 事务上查询到的是旧值还是新值？](#a-事务未提交b-事务上查询到的是旧值还是新值)
+  - [52.什么是脏读、不可重复读、幻读呢？](#52什么是脏读不可重复读幻读呢)
+    - [不同的隔离级别，在并发事务下可能会发生什么问题？](#不同的隔离级别在并发事务下可能会发生什么问题)
+  - [53.事务的各个隔离级别都是如何实现的？](#53事务的各个隔离级别都是如何实现的)
+  - [54.MVCC 了解吗？怎么实现的？](#54mvcc-了解吗怎么实现的)
+    - [什么是版本链？](#什么是版本链)
+    - [说说什么是 ReadView？](#说说什么是-readview)
+    - [ReadView 是如何判断记录的某个版本是否可见的？](#readview-是如何判断记录的某个版本是否可见的)
+    - [可重复读和读已提交在 ReadView 上的区别是什么？](#可重复读和读已提交在-readview-上的区别是什么)
+    - [如果两个 AB 事务并发修改一个变量，那么 A 读到的值是什么，怎么分析](#如果两个-ab-事务并发修改一个变量那么-a-读到的值是什么怎么分析)
+  - [55.数据库读写分离了解吗？](#55数据库读写分离了解吗)
+  - [56.那读写分离的分配怎么实现呢？](#56那读写分离的分配怎么实现呢)
+    - [1. 程序代码封装](#1-程序代码封装)
+    - [2. 中间件封装](#2-中间件封装)
+  - [57.主从复制原理了解吗？](#57主从复制原理了解吗)
+  - [58.主从同步延迟怎么处理？](#58主从同步延迟怎么处理)
+    - [主从同步延迟的原因](#主从同步延迟的原因)
+    - [主从同步延迟的解决办法](#主从同步延迟的解决办法)
+  - [59.你们一般是怎么分库的呢？](#59你们一般是怎么分库的呢)
+  - [60.那你们是怎么分表的？](#60那你们是怎么分表的)
+    - [常用的分库分表中间件有哪些？](#常用的分库分表中间件有哪些)
+  - [61.水平分表有哪几种路由方式？](#61水平分表有哪几种路由方式)
+    - [什么是范围路由？](#什么是范围路由)
+    - [什么是 Hash 路由？](#什么是-hash-路由)
+    - [什么是配置路由？](#什么是配置路由)
+  - [62.不停机扩容怎么实现？](#62不停机扩容怎么实现)
+  - [63.你觉得分库分表会带来什么问题呢？](#63你觉得分库分表会带来什么问题呢)
+  - [64.百万级别以上的数据如何删除？](#64百万级别以上的数据如何删除)
+  - [65.百万千万级大表如何添加字段？](#65百万千万级大表如何添加字段)
+  - [66.MySQL 数据库 cpu 飙升的话，要怎么处理呢？](#66mysql-数据库-cpu-飙升的话要怎么处理呢)
 
 <!-- /TOC -->
 
@@ -1678,3 +1742,1102 @@ FROM
 
 - **索引会占据磁盘空间**
 - **索引虽然会提高查询效率，但是会降低更新表的效率**。比如每次对表进行增删改操作，MySQL 不仅要保存数据，还有保存或者更新对应的索引文件。
+
+### 36.为什么 InnoDB 要使用 B+树作为索引？
+
+那在说 B+树之前，必须得先说一下 B 树（B-tree）。
+
+B 树是一种自平衡的多路查找树，和红黑树、二叉平衡树不同，B 树的每个节点可以有 m 个子节点，而红黑树和二叉平衡树都只有 2 个。
+
+换句话说，红黑树、二叉平衡树是细高个，而 B 树是矮胖子。
+
+![B 树](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-20240322132606.png)
+
+内存和磁盘在进行 IO 读写的时候，有一个最小的逻辑单元，叫做页（Page），页的大小一般是 4KB。
+
+那为了提高读写效率，从磁盘往内存中读数据的时候，一次会读取至少一页的数据，比如说读取 2KB 的数据，实际上会读取 4KB 的数据；读取 5KB 的数据，实际上会读取 8KB 的数据。**我们要尽量减少读写的次数**。
+
+树越高，意味着查找数据时就需要更多的磁盘 IO，因为每一层都可能需要从磁盘加载新的节点。
+
+B 树的节点大小通常与页的大小对齐，这样每次从磁盘加载一个节点时，可以正好是一个页的大小。因为 B 树的节点可以有多个子节点，可以填充更多的信息以达到一页的大小。
+
+![B 树](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-20240322141957.png)
+
+B 树的一个节点通常包括三个部分：
+
+- 键值：即表中的主键
+- 指针：存储子节点的信息
+- 数据：表记录中除主键外的数据
+
+不过，正所谓“祸兮福所倚，福兮祸所伏”，正是因为 B 树的每个节点上都存了数据，就导致每个节点能存储的键值和指针变少了，因为每一页的大小是固定的，对吧？
+
+于是 B+树就来了，B+树的非叶子节点只存储键值，不存储数据，而叶子节点存储了所有的数据，并且构成了一个有序链表。
+
+![B+树](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-20240322142950.png)
+
+MySQL 的默认存储引擎是 InnoDB，它采用的是 B+树索引，B+树是一种自平衡的多路查找树，和红黑树、二叉平衡树不同，B+树的每个节点可以有 m 个子节点，而红黑树和二叉平衡树都只有 2 个。
+
+和 B 树不同，B+树的非叶子节点只存储键值，不存储数据，而叶子节点存储了所有的数据，并且构成了一个有序链表。
+
+这样做的好处是，非叶子节点上由于没有存储数据，就可以存储更多的键值对，再加上叶子节点构成了一个有序链表，范围查询时就可以直接通过叶子节点间的指针顺序访问整个查询范围内的所有记录，而无需对树进行多次遍历。查询的效率会更高。
+
+#### B+树的页是单向链表还是双向链表？如果从大值向小值检索，如何操作？
+
+B+树的叶子节点是通过双向链表连接的，这样可以方便范围查询和反向遍历。
+
+- 当执行范围查询时，可以从范围的开始点或结束点开始，向前或向后遍历，这使得查询更为灵活。
+- 在需要对数据进行逆序处理时，双向链表非常有用。
+
+如果需要在 B+树中从大值向小值进行检索，可以按以下步骤操作：
+
+- 定位到最右侧节点：首先，找到包含最大值的叶子节点。这通常通过从根节点开始向右遍历树的方式实现。
+- 反向遍历：一旦定位到了最右侧的叶子节点，可以利用叶节点间的双向链表向左遍历。
+
+### 37.为什么 MongoDB 索引用 B树，而 MySQL 用 B+ 树？
+
+B树的特点是每个节点都存储数据，相邻的叶子节点之间没有指针链接。
+
+B+树的特点是非叶子节点只存储索引，叶子节点存储数据，并且相邻的叶子节点之间有指针链接。
+
+那么在查找单条数据时，B 树的查询效率可能会更高，因为每个节点都存储数据，所以最好情况就是 O(1)。
+
+但由于 B 树的节点之间没有指针链接，所以并不适合做范围查询，因为范围查询需要遍历多个节点。
+
+而 B+ 树的叶子节点之间有指针链接，所以适合做范围查询，因为可以直接通过叶子节点间的指针顺序访问整个查询范围内的所有记录，而无需对树进行多次遍历。
+
+*MySQL 属于关系型数据库，所以范围查询会比较多*，所以采用了 B+树；但 *MongoDB 属于非关系型数据库，在大多数情况下，只需要查询单条数据*，所以 MongoDB 选择了 B 树。
+
+### 38.一棵 B+树能存储多少条数据呢？
+
+![B+树存储数据条数](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-16f3523d-20b0-4376-908d-ac40b329768f.jpg)
+
+假如我们的主键 ID 是 bigint 类型，长度为 8 个字节。指针大小在 InnoDB 源码中设置为 6 字节，这样一共 14 字节。所以非叶子节点(一页)可以存储 16384/14=1170 个这样的单元(键值+指针)。
+
+一个指针指向一个存放记录的页，一页可以放 16 条数据，树深度为 2 的时候，可以存放 1170*16=18720 条数据。
+
+同理，树深度为 3 的时候，可以存储的数据为 `1170*1170*16=21902400`条记录。
+
+理论上，在 InnoDB 存储引擎中，B+树的高度一般为 2-4 层，就可以满足千万级数据的存储。查找数据的时候，一次页的查找代表一次 IO，当我们通过主键索引查询的时候，最多只需要 2-4 次 IO 就可以了。
+
+>innodb 使用数据页存储数据？默认数据页大小 16K，我现在有一张表，有 2kw 数据，我这个 b+树的高度有几层？
+
+在 MySQL 中，InnoDB 存储引擎的最小存储单元是页，默认大小是 16k，可通过参数设置。页可以用来存储 B+树叶子节点上的数据，也可以存放非叶子节点上的键值对。
+
+在查找数据时，一次页的查找代表一次 IO，一般 B+树的高度为 2-4 层，所以通过主键索引查询时，最多只需要 2-4 次 IO 就可以了。
+
+已知非叶子节点可以存储 1170 个键值对。
+
+假设一行数据的大小为 1KB，那么一页的叶子节点就可以存储 16 条数据。对于 3 层的 B+树，`第一层叶子节点数*第二层叶子节点数*一页能够存储的数据量` = `1170*1170*16 = 21902400` 条数据。
+
+如果有 2KW 条数据，那么这颗 B+树的高度为 3 层。
+
+### 39.为什么要用 B+ 树，而不用普通二叉树？
+
+普通二叉树存在退化的情况，如果它退化成链表，就相当于全表扫描。
+
+#### 为什么不用平衡二叉树呢？
+
+读取数据的时候，是从磁盘先读到内存。平衡二叉树的每个节点只存储一个键值和数据，而 B+ 树可以存储更多的节点数据，树的高度也会降低，因此读取磁盘的次数就会下降，查询效率就快。
+
+### 40.为什么用 B+ 树而不用 B 树呢？
+
+B+ 树相比较 B 树，有这些优势：
+
+①、更高的查询效率
+
+B+树的所有值（数据记录或指向数据记录的指针）都存在于叶子节点，并且叶子节点之间通过指针连接，形成一个有序链表。
+
+这种结构使得 B+树非常适合进行范围查询——一旦到达了范围的开始位置，接下来的元素可以通过遍历叶子节点的链表顺序访问，而不需要回到树的上层。如 SQL 中的 ORDER BY 和 BETWEEN 查询。
+
+而 B 树的数据分布在整个树中，进行范围查询时可能需要遍历树的多个层级。
+
+②、更高的空间利用率
+
+在 B+树中，非叶子节点不存储数据，只存储键值，这意味着非叶子节点可以拥有更多的键，从而有更多的分叉。
+
+这导致树的高度更低，进一步降低了查询时磁盘 I/O 的次数，因为每一次从一个节点到另一个节点的跳转都可能涉及到磁盘 I/O 操作。
+
+③、查询效率更稳定
+
+B+树中所有叶子节点深度相同，所有数据查询路径长度相等，保证了每次搜索的性能稳定性。而在 B 树中，数据可以存储在内部节点，不同的查询可能需要不同深度的搜索。
+
+### 41.Hash 索引和 B+ 树索引区别是什么？
+
+- B+ 树索引可以进行范围查询，Hash 索引不能。
+- B+ 树索引支持联合索引的最左侧原则，Hash 索引不支持。
+- B+ 树索引支持 order by 排序，Hash 索引不支持。
+- Hash 索引在等值查询上比 B+ 树索引效率更高。
+- B+ 树使用 like 进行模糊查询的时候，`LIKE 'abc%'` 的话可以起到索引优化的作用，Hash 索引无法进行模糊查询。
+
+### 42.MySQL 模糊查询怎么查，什么情况下模糊查询不走索引？
+
+MySQL 中进行模糊查询主要使用 LIKE 语句，结合通配符 %（代表任意多个字符）和 _（代表单个字符）来实现。
+
+```sql
+SELECT * FROM table WHERE column LIKE '%xxx%';
+```
+
+这个查询会返回所有 column 列中包含 xxx 的记录。
+
+但是，如果模糊查询的通配符 % 出现在搜索字符串的开始位置，如 `LIKE '%xxx'`，MySQL 将无法使用索引，因为数据库必须扫描全表以匹配任意位置的字符串。
+
+### 43.聚簇索引与非聚簇索引的区别？
+
+在 MySQL 的 InnoDB 存储引擎中，主键就是聚簇索引。聚簇索引不是一种新的索引，而是一种**数据存储方式**。
+
+![聚簇索引和非聚簇索引](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-692cced2-615a-4b70-a933-69771d53e809.jpg)
+
+在聚簇索引中，表中的行是按照键值（索引）的顺序存储的。这意味着表中的实际数据行和键值之间存在物理排序的关系。因此，每个表只能有一个聚簇索引。
+
+在非聚簇索引中，索引和数据是分开存储的，索引中的键值指向数据的实际存储位置。因此，非聚簇索引也被称为二级索引或辅助索引或非主键索引。表可以有多个非聚簇索引。
+
+这意味着，当使用非聚簇索引检索数据时，数据库首先在索引中查找，然后通过索引中的指针去访问表中实际的数据行，这个过程称为“回表”（Bookmark Lookup）。
+
+举例来说：
+
+- InnoDB 采用的是聚簇索引，如果没有显式定义主键，InnoDB 会选择一个唯一的非空列作为隐式的聚簇索引；如果这样的列也不存在，InnoDB 会自动生成一个隐藏的行 ID 作为聚簇索引。这意味着数据与主键是紧密绑定的，行数据直接存储在索引的叶子节点上。
+- MyISAM 采用的是非聚簇索引，表数据存储在一个地方，而索引存储在另一个地方，索引指向数据行的物理位置。
+
+#### 回表了解吗？
+
+回表是指在数据库查询过程中，通过非聚簇索引（secondary index）查找到记录的主键值后，再根据这个主键值到聚簇索引（clustered index）中查找完整记录的过程。
+
+回表操作通常发生在使用非聚簇索引进行查询，但查询的字段不全在该索引中，必须通过主键进行再次查询以获取完整数据。
+
+换句话说，数据库需要先查找索引，然后再根据索引回到数据表中去查找实际的数据。
+
+因此，使用非聚簇索引查找数据通常比使用聚簇索引要慢，因为需要进行两次磁盘访问。当然，如果索引所在的数据页已经被加载到内存中，那么非聚簇索引的查找速度也可以非常快。
+
+例如：`select * from user where name = '张三';`，会先从辅助索引中找到 name='张三' 的主键 ID，然后再根据主键 ID 从主键索引中找到对应的数据行。
+
+![InnoDB 回表](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-7d69e289-dc05-47e1-9308-20a8278ebf2e.jpg)
+
+假设现在有一张用户表 users：
+
+```sql
+CREATE TABLE users (
+    id INT PRIMARY KEY,
+    name VARCHAR(50),
+    age INT,
+    email VARCHAR(50),
+    INDEX (name)
+);
+```
+
+执行查询：
+
+```sql
+SELECT * FROM users WHERE name = '张三';
+```
+
+查询过程如下：
+
+- MySQL 使用 name 列上的非聚簇索引查找到所有 `name = '张三'` 的记录，得到对应的主键 id。
+- 使用主键 id 到聚簇索引中查找完整记录。
+
+#### 回表记录越多好吗？
+
+回表记录越多并不是一件好事。事实上，回表的代价是很高的，尤其在记录较多时，回表操作会显著影响查询性能。
+
+因为每次回表操作都需要进行一次磁盘 I/O 读取操作。如果回表记录很多，会导致大量的磁盘 I/O。
+
+索引覆盖（Covering Index）可以减少回表操作，将查询的字段都放在索引中，这样不需要回表就可以获取到查询结果了。
+
+#### 覆盖索引了解吗？
+
+覆盖索引（Covering Index）是数据库索引优化中的一个重要概念，它指的是一种索引能够“覆盖”查询中所涉及的所有列，换句话说，查询所需的数据全部都可以从索引中直接获取，而无需访问数据表的行数据（也就是无需回表）。
+
+通常情况下，索引中只包含表的某些字段，数据库在通过索引查找到满足条件的记录后，还需要回到表中获取其它字段的数据，这个过程叫做“回表”。
+
+假设有一张用户表 users，包含以下字段：id、name、email、age。执行下面的查询：
+
+```sql
+SELECT age, email FROM users WHERE name = "张三";
+```
+
+如果在 name 列上创建了索引，但没有在 age 和 email 列上创建索引，那么数据库引擎会：
+
+1. 使用 name 列的索引查找到满足条件的记录的 id。
+2. 根据 id 回表查询 age 和 email 字段的数据。
+
+如果创建了一个覆盖索引 idx\_users\_name\_email\_age 包含 name、email、age 列：
+
+```sql
+CREATE INDEX idx_users_name_email_age ON users (age, name, email);
+```
+
+那么执行：
+
+```sql
+SELECT age, email FROM users WHERE name = "张三";
+```
+
+查询时可以直接从索引中获取 age 和 email 的值，而不需要回表。这是因为索引已经覆盖了查询所需的所有字段。
+
+### 44.什么是最左前缀原则？
+
+在使用联合索引时，应当遵守最左前缀原则，或者叫最左匹配原则（最左前缀匹配原则）。
+
+它指的是在使用联合索引时，查询条件从索引的最左列开始并且不跳过中间的列。
+
+如果一个复合索引包含`(col1, col2, col3)`，那么它可以支持 `col1`、`col1,col2` 和 `col1, col2, col3` 的查询优化，但不支持只有 col2 或 col3 的查询。
+
+也就说，在进行查询时，如果没有遵循最左前缀，那么联合索引可能不会被利用，导致查询效率降低。
+
+#### 为什么不从最左开始查，就无法匹配呢？
+
+比如有一个 user 表，我们给 name 和 age 建立了一个联合索引 (name, age)。
+
+```sql
+ALTER TABLE user add INDEX comidx_name_phone (name,age);
+```
+
+联合索引在 B+ 树中是复合的数据结构，按照从左到右的顺序依次建立搜索树 (name 在左边，age 在右边)。
+
+![联合索引](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-e348203c-f00a-42a4-a745-b219d98ea435.jpg)
+
+注意，name 是有序的，age 是无序的。当 name 相等的时候，age 才有序。
+
+当我们使用 `where name= '张三' and age = '20'` 去查询的时候， B+ 树会优先比较 name 来确定下一步应该搜索的方向，往左还是往右。
+
+如果 name 相同的时候再比较 age。
+
+但如果查询条件没有 name，就不知道应该怎么查了，因为 name 是 B+树中的前置条件，没有 name，索引就派不上用场了。
+
+### 45.什么是索引下推优化？
+
+索引条件下推优化`（Index Condition Pushdown (ICP) ）`是 MySQL5.6 添加的，用于优化数据查询。
+
+- 不使用索引条件下推优化时存储引擎通过索引检索到数据，然后返回给 MySQL Server，MySQL Server 进行过滤条件的判断。
+- 当使用索引条件下推优化时，如果存在某些被索引的列的判断条件时，MySQL Server 将这一部分判断条件**下推**给存储引擎，然后由存储引擎通过判断索引是否符合 MySQL Server 传递的条件，只有当索引符合条件时才会将数据检索出来返回给 MySQL 服务器。
+
+例如一张表，建了一个联合索引（name, age），查询语句：`select * from t_user where name like '张%' and age=10;`，由于`name`使用了范围查询，根据最左匹配原则：
+
+不使用 ICP，引擎层查找到`name like '张%'`的数据，再由 Server 层去过滤`age=10`这个条件，这样一来，就回表了两次，浪费了联合索引的另外一个字段`age`。
+
+![没有使用 ICP](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-c58f59e0-850b-4dfd-8129-2dfc51cf4768.jpg)
+
+但是，使用了索引下推优化，把 where 的条件放到了引擎层执行，直接根据name like '张%' and age=10的条件进行过滤，减少了回表的次数。
+
+![使用 ICP](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-a8525cf3-2d16-49a9-a7da-a19762ed16df.jpg)
+
+索引条件下推优化可以减少存储引擎查询基础表的次数，也可以减少 MySQL 服务器从存储引擎接收数据的次数。
+
+### 46.MySQL 中有哪几种锁，列举一下？
+
+![MySQL 中的锁](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-a07e4525-ccc1-4287-aec5-ebf3f277857c.jpg)
+
+#### 按锁粒度如何划分?
+
+按锁粒度划分的话，MySQL 的锁有：
+
+- 表锁：开销小，加锁快；锁定力度大，发生锁冲突概率高，并发度最低；不会出现死锁。
+- 行锁：开销大，加锁慢；会出现死锁；锁定粒度小，发生锁冲突的概率低，并发度高。
+- 页锁：开销和加锁速度介于表锁和行锁之间；会出现死锁；锁定粒度介于表锁和行锁之间，并发度一般。
+
+#### 按兼容性如何划分?
+
+按兼容性划分的话，MySQL 的锁有：
+
+- 共享锁（S Lock），也叫读锁（read lock），相互不阻塞。
+- 排他锁（X Lock），也叫写锁（write lock），排它锁是阻塞的，在一定时间内，只有一个请求能执行写入，并阻止其它锁读取正在写入的数据。
+
+#### 按加锁机制如何划分?
+
+①、乐观锁
+
+乐观锁基于这样的假设：冲突在系统中出现的频率较低，因此在数据库事务执行过程中，不会频繁地去锁定资源。相反，它在提交更新的时候才检查是否有其他事务已经修改了数据。
+
+可以通过在数据表中使用版本号（Version）或时间戳（Timestamp）来实现，每次读取记录时，同时获取版本号或时间戳，更新时检查版本号或时间戳是否发生变化。
+
+如果没有变化，则执行更新并增加版本号或更新时间戳；如果检测到冲突（即版本号或时间戳与之前读取的不同），则拒绝更新。
+
+②、悲观锁
+
+悲观锁假设冲突是常见的，因此在数据处理过程中，它会主动锁定数据，防止其他事务进行修改。
+
+可以直接使用数据库的锁机制，如行锁或表锁，来锁定被访问的数据。常见的实现是 `SELECT FOR UPDATE` 语句，它在读取数据时就加上了锁，直到当前事务提交或回滚后才释放。
+
+#### 如何解决库存超卖问题？
+
+按照乐观锁的方式：
+
+```sql
+UPDATE inventory SET count = count - 1, version = version + 1 WHERE product_id = 1 AND version = current_version;
+```
+
+按照悲观锁的方式：
+
+在事务开始时直接锁定库存记录，直到事务结束。
+
+```sql
+START TRANSACTION;
+SELECT * FROM inventory WHERE product_id = 1 FOR UPDATE;
+UPDATE inventory SET count = count - 1 WHERE product_id = 1;
+COMMIT;
+```
+
+#### 全局锁和表级锁了解吗？
+
+全局锁就是对整个数据库实例进行加锁，在 MySQL 中，可以使用 `FLUSH TABLES WITH READ LOCK` 命令来获取全局读锁。
+
+全局锁的作用是保证在备份数据库时，数据不会发生变化【数据更新语句（增删改）、数据定义语句（建表、修改表结构等）和更新事务的提交语句】。当我们需要备份数据库时，可以先获取全局读锁，然后再执行备份操作。
+
+表锁（Table Lock）就是锁住整个表。在 MySQL 中，可以使用 `LOCK TABLES` 命令来锁定表。
+
+表锁可以分为读锁（共享锁）和写锁（排他锁）。
+
+```sql
+LOCK TABLES your_table READ;
+-- 执行读操作
+UNLOCK TABLES;
+```
+
+读锁允许多个事务同时读取被锁定的表，但不允许任何事务进行写操作。
+
+```sql
+LOCK TABLES your_table WRITE;
+-- 执行写操作
+UNLOCK TABLES;
+```
+
+写锁允许一个事务对表进行读写操作，其他事务不能对该表进行任何操作（读或写）。
+
+在进行大规模的数据导入、导出或删除操作时，为了防止其他事务对数据进行并发操作，可以使用表锁。
+
+或者在进行表结构变更（如添加列、修改列类型）时，为了确保变更期间没有其他事务访问或修改该表，可以使用表锁。
+
+#### 说说 MySQL 的行锁？
+
+行级锁（Row Lock）是数据库锁机制中最细粒度的锁，主要用于对单行数据进行加锁，以确保数据的一致性和完整性。
+
+在 MySQL 中，InnoDB 存储引擎支持行级锁。通过 `SELECT ... FOR UPDATE` 可以加排他锁，通过 `LOCK IN SHARE MODE` 可以加共享锁。
+
+比如说：
+
+```sql
+START TRANSACTION;
+
+-- 加排他锁，锁定某一行
+SELECT * FROM your_table WHERE id = 1 FOR UPDATE;
+-- 对该行进行操作
+UPDATE your_table SET column1 = 'new_value' WHERE id = 1;
+
+COMMIT;
+```
+
+```sql
+START TRANSACTION;
+
+-- 加共享锁，锁定某一行
+SELECT * FROM your_table WHERE id = 1 LOCK IN SHARE MODE;
+-- 只能读取该行，不能修改
+
+COMMIT;
+```
+
+在高并发环境中，行级锁能够提高系统的并发性能，因为锁定的粒度较小，只会锁住特定的行，不会影响其他行的操作。
+
+> select for update 加锁有什么需要注意的？
+
+如果查询条件使用了索引（特别是主键索引或唯一索引），SELECT FOR UPDATE 会锁定特定的行，即行级锁，这样锁的粒度较小，不会影响未涉及的行或其他并发操作。
+
+但如果查询条件未使用索引，SELECT FOR UPDATE 可能锁定整个表或大量的行，因为查询需要执行全表扫描。
+
+假设有一张名为 orders 的表，包含以下数据：
+
+```sql
+CREATE TABLE orders (
+    id INT PRIMARY KEY,
+    order_no VARCHAR(255),
+    amount DECIMAL(10,2),
+    status VARCHAR(50),
+    INDEX (order_no)  -- order_no 上有索引
+);
+```
+
+表中的数据是这样的：
+
+| id | order\_no | amount | status |
+| --- | --- | --- | --- |
+| 1 | 10001 | 50.00 | pending |
+| 2 | 10002 | 75.00 | pending |
+| 3 | 10003 | 100.00 | pending |
+| 4 | 10004 | 150.00 | completed |
+| 5 | 10005 | 200.00 | pending |
+
+如果我们通过主键索引执行 SELECT FOR UPDATE，只会锁定特定的行：
+
+```sql
+START TRANSACTION;
+SELECT * FROM orders WHERE id = 1 FOR UPDATE;
+-- 对 id=1 的行进行操作
+COMMIT;
+```
+
+由于 id 是主键，所以只会锁定 id=1 这行，不会影响其他行的操作。其他事务依然可以对 id = 2, 3, 4, 5 等行执行更新操作，因为它们没有被锁定。
+
+如果使用 order_no 索引执行 SELECT FOR UPDATE，也只会锁定特定的行：
+
+```sql
+START TRANSACTION;
+SELECT * FROM orders WHERE order_no = '10001' FOR UPDATE;
+-- 对 order_no=10001 的行进行操作
+COMMIT;
+```
+
+因为 order_no 上有索引，所以只会锁定 order_no=10001 这行，不会影响其他行的操作。
+
+但如果查询 status='pending'，而 status 上没有索引：
+
+```sql
+START TRANSACTION;
+SELECT * FROM orders WHERE status = 'pending' FOR UPDATE;
+-- 对 status=pending 的行进行操作
+COMMIT;
+```
+
+查询需要执行全表扫描。在这种情况下，SELECT FOR UPDATE 可能会锁定表中所有符合条件的记录，甚至是整个表，因为 MySQL 需要检查每一行的 status。
+
+这会影响表中的大部分记录，其他事务将无法修改这些记录，直到当前事务结束。
+
+#### 说说 InnoDB 的行锁实现？
+
+我们拿这么一个用户表来表示行级锁，其中插入了 4 行数据，主键值分别是 1,6,8,12，现在简化它的聚簇索引结构，只保留数据记录。
+
+![简化的主键索引](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-013afdbe-889b-4ed0-ae68-c8c9882570d9.jpg)
+
+InnoDB 的行锁的主要实现如下：
+
+①、**Record Lock 记录锁**
+
+记录锁就是直接锁定某行记录。当我们使用唯一性的索引(包括唯一索引和聚簇索引)进行等值查询且精准匹配到一条记录时，此时就会直接将这条记录锁定。例如`select * from t where id =6 for update;`就会将`id=6`的记录锁定。
+
+![记录锁](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-8989ac27-e442-4c14-81ad-6bc133d78bfd.jpg)
+
+②、**Gap Lock 间隙锁**
+
+间隙锁(Gap Locks) 的间隙指的是两个记录之间逻辑上尚未填入数据的部分,是一个**左开右开空间**。
+
+![间隙锁](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-d60f3a42-4b0f-4612-b7ad-65191fecb852.jpg)
+
+间隙锁就是锁定某些间隙区间的。当我们使用用等值查询或者范围查询，并且没有命中任何一个`record`，此时就会将对应的间隙区间锁定。例如`select * from t where id =3 for update;`或者`select * from t where id > 1 and id < 6 for update;`就会将(1,6)区间锁定。
+
+③、**Next-key Lock 临键锁**
+
+临键指的是间隙加上它右边的记录组成的**左开右闭区间**。比如上述的`(1,6]、(6,8]`等。
+
+![临键锁](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-ae8a21cc-8b52-467d-9173-4e01b24e04b9.jpg)
+
+临键锁就是记录锁(Record Locks)和间隙锁(Gap Locks)的结合，即除了锁住记录本身，还要再锁住索引之间的间隙。当我们使用范围查询，并且命中了部分`record`记录，此时锁住的就是临键区间。
+
+注意，临键锁锁住的区间会包含最后一个 record 的右边的临键区间。
+
+例如 `select * from t where id > 5 and id <= 7 for update;` 会锁住`(4,7]、(7,+∞)`。
+
+MySQL 默认行锁类型就是`临键锁(Next-Key Locks)`。当使用唯一性索引，等值查询匹配到一条记录的时候，临键锁(Next-Key Locks)会退化成记录锁；没有匹配到任何记录的时候，退化成间隙锁。
+
+`间隙锁(Gap Locks)`和`临键锁(Next-Key Locks)`都是用来解决幻读问题的，在`已提交读（READ COMMITTED）`隔离级别下，`间隙锁(Gap Locks)`和`临键锁(Next-Key Locks)`都会失效！
+
+上面是行锁的三种实现算法，除此之外，在行上还存在插入意向锁。
+
+④、**Insert Intention Lock 插入意向锁**
+
+一个事务在插入一条记录时需要判断一下插入位置是不是被别的事务加了意向锁 ，如果有的话，插入操作需要等待，直到拥有 gap 锁 的那个事务提交。但是事务在等待的时候也需要在内存中生成一个 锁结构 ，表明有事务想在某个 间隙 中插入新记录，但是现在在等待。这种类型的锁命名为 Insert Intention Locks ，也就是插入意向锁 。
+
+假如我们有个 T1 事务，给(1,6)区间加上了意向锁，现在有个 T2 事务，要插入一个数据，id 为 4，它会获取一个（1,6）区间的插入意向锁，又有有个 T3 事务，想要插入一个数据，id 为 3，它也会获取一个（1,6）区间的插入意向锁，但是，这两个插入意向锁锁不会互斥。
+
+![插入意向锁](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-751425cb-daba-4da1-bab6-f843254cad3d.jpg)
+
+#### 意向锁是什么知道吗？
+
+意向锁是一个表级锁，不要和插入意向锁搞混。
+
+意向锁的出现是为了支持 InnoDB 的多粒度锁，它解决的是表锁和行锁共存的问题。
+
+当我们需要给一个表加表锁的时候，我们需要根据去判断表中有没有数据行被锁定，以确定是否能加成功。
+
+假如没有意向锁，那么我们就得遍历表中所有数据行来判断有没有行锁；
+
+有了意向锁这个表级锁之后，则我们直接判断一次就知道表中是否有数据行被锁定了。
+
+有了意向锁之后，要执行的事务 A 在申请行锁（写锁）之前，数据库会自动先给事务 A 申请表的意向排他锁。当事务 B 去申请表的互斥锁时就会失败，因为表上有意向排他锁之后事务 B 申请表的互斥锁时会被阻塞。
+
+![意向锁](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-31f7f49c-1e5a-4d42-b8b3-e022b3ba82ae.jpg)
+
+### 47.MySQL 的乐观锁和悲观锁了解吗？
+
+- **悲观锁**（Pessimistic Concurrency Control）：
+
+悲观锁认为被它保护的数据是极其不安全的，每时每刻都有可能被改动，一个事务拿到悲观锁后，其他任何事务都不能对该数据进行修改，只能等待锁被释放才可以执行。
+
+数据库中的行锁，表锁，读锁，写锁均为悲观锁。
+
+- **乐观锁（Optimistic Concurrency Control）**
+
+乐观锁认为数据的变动不会太频繁。
+
+乐观锁通常是通过在表中增加一个版本(version)或时间戳(timestamp)来实现，其中，版本最为常用。
+
+事务在从数据库中取数据时，会将该数据的版本也取出来(v1)，当事务对数据变动完毕想要将其更新到表中时，会将之前取出的版本 v1 与数据中最新的版本 v2 相对比，如果 v1=v2，那么说明在数据变动期间，没有其他事务对数据进行修改，此时，就允许事务对表中的数据进行修改，并且修改时 version 会加 1，以此来表明数据已被变动。
+
+如果，v1 不等于 v2，那么说明数据变动期间，数据被其他事务改动了，此时不允许数据更新到表中，一般的处理办法是通知用户让其重新操作。不同于悲观锁，乐观锁通常是由开发者实现的。
+
+### 48.MySQL 遇到过死锁问题吗，你是如何解决的？
+
+排查死锁的一般步骤是这样的：
+
+（1）查看死锁日志 show engine innodb status;
+
+（2）找出死锁 sql
+
+（3）分析 sql 加锁情况
+
+（4）模拟死锁案发
+
+（5）分析死锁日志
+
+（6）分析死锁结果
+
+当然，这只是一个简单的流程说明，实际上生产中的死锁千奇百怪，排查和解决起来没那么简单。
+
+### 49.MySQL 事务的四大特性说一下？
+
+事务是一个或多个 SQL 语句组成的一个执行单元，这些 SQL 语句要么全部执行成功，要么全部不执行，不会出现部分执行的情况。事务是数据库管理系统执行过程中的一个逻辑单位，由一个有限的数据库操作序列构成。
+
+事务的主要作用是保证数据库操作的一致性，即事务内的操作，要么全部成功，要么全部失败回滚，不会出现中间状态。这对于维护数据库的完整性和一致性非常重要。
+
+事务具有四个基本特性，也就是通常所说的 ACID 特性，即原子性（Atomicity）、一致性（Consistency）、隔离性（Isolation）和持久性（Durability）。
+
+![事务四大特性](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-eaafb8b8-fbe6-42c0-9cc2-f2e04631b56c.jpg)
+
+**什么是原子性**？
+
+原子性子性意味着事务中的所有操作要么全部完成，要么全部不完成，它是不可分割的单位。如果事务中的任何一个操作失败了，整个事务都会回滚到事务开始之前的状态，如同这些操作从未被执行过一样。
+
+**什么是一致性**？
+
+一致性确保事务从一个一致的状态转换到另一个一致的状态。
+
+比如在银行转账事务中，无论发生什么，转账前后两个账户的总金额应保持不变。假如 A 账户（100 块）给 B 账户（10 块）转了 10 块钱，不管成功与否，A 和 B 的总金额都是 110 块。
+
+**什么是隔离性**？
+
+隔离性意味着并发执行的事务是彼此隔离的，一个事务的执行不会被其他事务干扰。就是事务之间是井水不犯河水的。
+
+隔离性主要是为了解决事务并发执行时可能出现的问题，如脏读、不可重复读、幻读等。
+
+数据库系统通过事务隔离级别（如读未提交、读已提交、可重复读、串行化）来实现事务的隔离性。
+
+**什么是持久性**？
+
+持久性确保事务一旦提交，它对数据库所做的更改就是永久性的，即使发生系统崩溃，数据库也能恢复到最近一次提交的状态。通常，持久性是通过数据库的恢复和日志机制来实现的，确保提交的事务更改不会丢失。
+
+简短一点的回答可以是：
+
+- **原子性**：事务的所有操作要么全部提交成功，要么全部失败回滚，对于一个事务中的操作不能只执行其中一部分。
+- **一致性**：事务应确保数据库的状态从一个一致状态转变为另一个一致状态。一致性与业务规则有关，比如银行转账，不论事务成功还是失败，转账双方的总金额应该是不变的。
+- **隔离性**：多个并发事务之间需要相互隔离，即一个事务的执行不能被其他事务干扰。
+- **持久性**：一旦事务提交，则其所做的修改将永久保存到数据库中。即使发生系统崩溃，修改的数据也不会丢失。
+
+### 50.那 ACID 靠什么保证的呢？
+
+MySQL 通过事务、undo log、redo log 来确保 ACID。
+
+![ACID 的保证机制](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-20230919103025.png)
+
+#### 如何保证原子性？
+
+MySQL 通过 undo log 来确保原子性（Atomicity）。
+
+当事务开始时，MySQL 会在`undo log`中记录事务开始前的旧值。如果事务执行失败，MySQL 会使用`undo log`中的旧值来回滚事务开始前的状态；如果事务执行成功，MySQL 会在某个时间节点将`undo log`删除。
+
+#### 如何保证一致性？
+
+如果其他三个特性都得到了保证，那么一致性（Consistency）就自然而然得到保证了。
+
+#### 如何保证隔离性？
+
+MySQL 定义了多种隔离级别，通过 MVCC 来确保每个事务都有专属自己的数据版本，从而实现隔离性（Isolation）。
+
+在 MVCC 中，每行记录都有一个版本号，当事务尝试读取记录时，会根据事务的隔离级别和记录的版本号来决定是否可以读取。
+
+#### 如何保证持久性？
+
+redo log 是一种物理日志，当执行写操作时，MySQL 会先将更改记录到 redo log 中。当 redo log 填满时，MySQL 再将这些更改写入数据文件中。
+
+如果 MySQL 在写入数据文件时发生崩溃，可以通过 redo log 来恢复数据文件，从而确保持久性（Durability）。
+
+### 51.事务的隔离级别有哪些？MySQL 的默认隔离级别是什么？
+
+事务的隔离级别定了一个事务可能受其他事务影响的程度，MySQL 支持的四种隔离级别分别是：读未提交（Read Uncommitted）、读已提交（Read Committed）、可重复读（Repeatable Read）和串行化（Serializable）。
+
+![事务的四个隔离级别](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-99942529-4a91-420b-9ce2-4149e747f64d.jpg)
+
+什么是读未提交？
+
+读未提交是最低的隔离级别，在这个级别，当前事务可以读取未被其他事务提交的数据，以至于会出现“脏读”、“不可重复读”和“幻读”的问题。
+
+什么是读已提交？
+
+当前事务只能读取已经被其他事务提交的数据，可以避免“脏读”现象。但不可重复读和幻读问题仍然存在。
+
+什么是可重复读？
+
+确保在同一事务中多次读取相同记录的结果是一致的，即使其他事务对这条记录进行了修改，也不会影响到当前事务。
+
+**可重复读是 MySQL 默认的隔离级别**，避免了“脏读”和“不可重复读”，但可能会出现幻读。
+
+什么是串行化？
+
+最高的隔离级别，通过强制事务串行执行来避免并发问题，可以解决“脏读”、“不可重复读”和“幻读”问题。
+
+但会导致大量的超时和锁竞争问题。
+
+#### A 事务未提交，B 事务上查询到的是旧值还是新值？
+
+在 MySQL 的默认隔离级别（可重复读）下，如果事务 A 修改了数据但未提交，事务 B 将看到修改之前的数据。
+
+这是因为在可重复读隔离级别下，MySQL 将通过多版本并发控制（MVCC）机制来保证一个事务不会看到其他事务未提交的数据，从而确保读一致性。
+
+### 52.什么是脏读、不可重复读、幻读呢？
+
+脏读指的是一个事务能够读取另一个事务尚未提交的数据。如果读到的数据在之后被回滚了，那么第一个事务读取到的就是无效的数据。
+
+```sql
+-- 事务 A
+START TRANSACTION;
+UPDATE employees SET salary = 5000 WHERE id = 1;
+
+-- 事务 B
+START TRANSACTION;
+SELECT salary FROM employees WHERE id = 1;  -- 读取到 salary = 5000 (脏读)
+ROLLBACK;
+```
+
+不可重复读指的是在同一事务中执行相同的查询时，返回的结果集不同。这是由于在事务过程中，另一个事务修改了数据并提交。
+
+比如说事务 A 在第一次读取某个值后，事务 B 修改了这个值并提交，事务 A 再次读取时，发现值已经改变。
+
+```sql
+-- 事务 A
+START TRANSACTION;
+SELECT salary FROM employees WHERE id = 1;  -- 读取到 salary = 3000
+
+-- 事务 B
+START TRANSACTION;
+UPDATE employees SET salary = 5000 WHERE id = 1;
+COMMIT;
+
+-- 事务 A 再次读取
+SELECT salary FROM employees WHERE id = 1;  -- 读取到 salary = 5000 (不可重复读)
+COMMIT;
+```
+
+幻读指的是在同一事务中执行相同的查询时，返回的结果集中出现了之前没有的数据行。这是因为在事务过程中，另一个事务插入了新的数据并提交。
+
+比如说事务 A 在第一次查询某个条件范围的数据行后，事务 B 插入了一条新数据且符合条件范围，事务 A 再次查询时，发现多了一条数据。
+
+```sql
+-- 事务 A
+START TRANSACTION;
+SELECT * FROM employees WHERE department = 'HR';  -- 读取到 10 条记录
+
+-- 事务 B
+START TRANSACTION;
+INSERT INTO employees (id, name, department) VALUES (11, 'John Doe', 'HR');
+COMMIT;
+
+-- 事务 A 再次查询
+SELECT * FROM employees WHERE department = 'HR';  -- 读取到 11 条记录 (幻读)
+COMMIT;
+```
+
+可以通过设置隔离级别为可串行化来避免幻读，代价是降低并发性能。
+
+#### 不同的隔离级别，在并发事务下可能会发生什么问题？
+
+| 隔离级别 | 脏读 | 不可重复读 | 幻读 |
+| --- | --- | --- | --- |
+| Read Uncommited 读取未提交 | 是 | 是 | 是 |
+| Read Commited 读取已提交 | 否 | 是 | 是 |
+| Repeatable Read 可重复读 | 否 | 否 | 是 |
+| Serialzable 可串行化 | 否 | 否 | 否 |
+
+### 53.事务的各个隔离级别都是如何实现的？
+
+**读未提交是如何实现的**？
+
+不提供任何锁机制来保护读取的数据，允许读取未提交的数据（即脏读）。
+
+**读已提交&可重复读是如何实现的**？
+
+读已提交和可重复读通过 MVCC 机制中的 ReadView 来实现。
+
+- READ COMMITTED：每次读取数据前都生成一个 ReadView，保证每次读操作都是最新的数据。
+- REPEATABLE READ：只在第一次读操作时生成一个 ReadView，后续读操作都使用这个 ReadView，保证事务内读取的数据是一致的。
+
+**串行化是如何实现的**？
+
+事务在读操作时，必须先加表级共享锁，直到事务结束才释放；事务在写操作时，必须先加表级排他锁，直到事务结束才释放。
+
+### 54.MVCC 了解吗？怎么实现的？
+
+MVCC 是多版本并发控制（Multi-Version Concurrency Control）的简称，主要用来解决数据库并发问题。
+
+在支持 MVCC 的数据库中，当多个用户同时访问数据时，每个用户都可以看到一个在某一时间点之前的数据库快照，并且能够无阻塞地执行查询和修改操作，而不会相互干扰。
+
+在传统的锁机制中，如果一个事务正在写数据，那么其他事务必须等待写事务完成才能读数据，MVCC 允许读操作访问数据的一个旧版本快照，同时写操作创建一个新的版本，这样读写操作就可以并行进行，不必等待对方完成。
+
+在 MySQL 中，特别是 InnoDB 存储引擎，MVCC 是通过版本链和 ReadView 机制来实现的。
+
+#### 什么是版本链？
+
+在 InnoDB 中，每一行数据都有两个隐藏的列：一个是 DB\_TRX\_ID，另一个是 DB\_ROLL\_PTR。
+
+- `DB_TRX_ID`，保存创建这个版本的事务 ID。
+- `DB_ROLL_PTR`，指向 undo 日志记录的指针，这个记录包含了该行的前一个版本的信息。通过这个指针，可以访问到该行数据的历史版本。
+
+![版本链](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-20240415084347.png)
+
+假设有一张hero表，表中有一行记录 name 为张三，city 为帝都，插入这行记录的事务 id 是 80。此时，DB_TRX_ID的值就是 80，DB_ROLL_PTR的值就是指向这条 insert undo 日志的指针。
+
+接下来，如果有两个DB_TRX_ID分别为100、200的事务对这条记录进行了update操作，那么这条记录的版本链就会变成下面这样：
+
+![update 操作](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-bf4ff00d-01bd-4170-a17b-6919f7873ea4.jpg)
+
+当事务更新一行数据时，InnoDB 不会直接覆盖原有数据，而是创建一个新的数据版本，并更新 DB_TRX_ID 和 DB_ROLL_PTR，使得它们指向前一个版本和相关的 undo 日志。这样，老版本的数据不会丢失，可以通过版本链找到。
+
+由于 undo 日志会记录每一次的 update，并且新插入的行数据会记录上一条 undo 日志的指针，所以可以通过这个指针找到上一条记录，这样就形成了一个版本链。
+
+![版本链](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-765b3d83-14eb-4b56-8940-9d60bfaf1737.jpg)
+
+#### 说说什么是 ReadView？
+
+ReadView（读视图）是 InnoDB 为了实现一致性读（Consistent Read）而创建的数据结构，它用于确定在特定事务中哪些版本的行记录是可见的。
+
+ReadView 主要用来处理隔离级别为"可重复读"（REPEATABLE READ）和"读已提交"（READ COMMITTED）的情况。因为在这两个隔离级别下，事务在读取数据时，需要保证读取到的数据是一致的，即读取到的数据是在事务开始时的一个快照。
+
+![ReadView](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-20240415093703.png)
+
+当事务开始执行时，InnoDB 会为该事务创建一个 ReadView，这个 ReadView 会记录 4 个重要的信息：
+
+- creator\_trx\_id：创建该 ReadView 的事务 ID。
+- m\_ids：所有活跃事务的 ID 列表，活跃事务是指那些已经开始但尚未提交的事务。
+- min\_trx\_id：所有活跃事务中最小的事务 ID。它是 m\_ids 数组中最小的事务 ID。
+- max\_trx\_id ：事务 ID 的最大值加一。换句话说，它是下一个将要生成的事务 ID。
+
+#### ReadView 是如何判断记录的某个版本是否可见的？
+
+![ReadView](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-20240415094939.png)
+
+当一个事务读取某条数据时，InnoDB 会根据 ReadView 中的信息来判断该数据的某个版本是否可见。
+
+①、如果某个数据版本的 DB\_TRX\_ID 小于 min\_trx\_id，则该数据版本在生成 ReadView 之前就已经提交，因此对当前事务是可见的。
+
+②、如果某个数据版本的 DB\_TRX\_ID 大于 max\_trx\_id，则表示创建该数据版本的事务在生成 ReadView 之后开始，因此对当前事务是不可见的。
+
+③、如果某个数据版本的 DB\_TRX\_ID 在 min\_trx\_id 和 max\_trx\_id 之间，需要判断 DB\_TRX\_ID 是否在 m\_ids 列表中：
+
+- 不在，表示创建该数据版本的事务在生成 ReadView 之后已经提交，因此对当前事务也是可见的。
+- 在，则表示创建该数据版本的事务仍然活跃，或者在当前事务生成 ReadView 之后开始，因此对当前事务是不可见的。
+
+>上面这种方式有点绕，我讲一个简单的记忆规则。
+
+读事务开启了一个 ReadView，这个 ReadView 里面记录了当前活跃事务的 ID 列表（444、555、665），以及最小事务 ID（444）和最大事务 ID（666）。当然还有自己的事务 ID 520，也就是 creator_trx_id。
+
+它要读的这行数据的写事务 ID 是 x，也就是 DB_TRX_ID。
+
+- 如果 x = 110，显然在 ReadView 生成之前就提交了，所以这行数据是可见的。
+- 如果 x = 667，显然是未知世界，所以这行数据对读操作是不可见的。
+- 如果 x = 519，虽然 519 大于 444 小于 666，但是 519 不在活跃事务列表里，所以这行数据是可见的。因为 519 是在 520 生成 ReadView 之前就提交了。
+- 如果 x = 555，虽然 555 大于 444 小于 666，但是 555 在活跃事务列表里，所以这行数据是不可见的。因为 555 不确定有没有提交。
+
+#### 可重复读和读已提交在 ReadView 上的区别是什么？
+
+可重复读（REPEATABLE READ）和读已提交（READ COMMITTED）的区别在于生成 ReadView 的时机不同。
+
+- 可重复读：在第一次读取数据时生成一个 ReadView，这个 ReadView 会一直保持到事务结束，这样可以保证在事务中多次读取同一行数据时，读取到的数据是一致的。
+- 读已提交：每次读取数据前都生成一个 ReadView，这样就能保证每次读取的数据都是最新的。
+
+#### 如果两个 AB 事务并发修改一个变量，那么 A 读到的值是什么，怎么分析
+
+当两个事务 A 和 B 并发修改同一个变量时，A 事务读取到的值取决于多个因素，包括事务的隔离级别、事务的开始时间和提交时间等。
+
+- 读未提交：在这个级别下，事务可以看到其他事务尚未提交的更改。如果 B 更改了一个变量但尚未提交，A 可以读到这个更改的值。
+- 读提交：A 只能看到 B 提交后的更改。如果 B 还没提交，A 将看到更改前的值。
+- 可重复读：在事务开始后，A 总是读取到变量的相同值，即使 B 在这期间提交了更改。这是通过 MVCC 机制实现的。
+- 可串行化：A 和 B 的操作是串行执行的，如果 A 先执行，那么 A 读到的值就是 B 提交前的值；如果 B 先执行，那么 A 读到的值就是 B 提交后的值。
+
+### 55.数据库读写分离了解吗？
+
+读写分离的基本原理是将数据库读写操作分散到不同的节点上，下面是基本架构图：
+
+![读写分离](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-31df767c-db05-4de4-a05b-a45bcf76c1bf.jpg)
+
+读写分离的基本实现是:
+
+- 数据库服务器搭建主从集群，一主一从、一主多从都可以。
+- 数据库主机负责读写操作，从机只负责读操作。
+- 数据库主机通过复制将数据同步到从机，每台数据库服务器都存储了所有的业务数据。
+- 业务服务器将写操作发给数据库主机，将读操作发给数据库从机。
+
+### 56.那读写分离的分配怎么实现呢？
+
+将读写操作区分开来，然后访问不同的数据库服务器，一般有两种方式：程序代码封装和中间件封装。
+
+#### 1. 程序代码封装
+
+程序代码封装指在代码中抽象一个数据访问层（所以有的文章也称这种方式为 "中间层封装" ） ，实现读写操作分离和数据库服务器连接的管理。例如，基于 Hibernate 进行简单封装，就可以实现读写分离：
+
+![业务代码封装](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-771eb01f-3f1a-4437-8e1b-affe4de36ec3.jpg)
+
+目前开源的实现方案中，淘宝的 TDDL （Taobao Distributed Data Layer, 外号：头都大了）是比较有名的。
+
+#### 2. 中间件封装
+
+中间件封装指的是独立一套系统出来，实现读写操作分离和数据库服务器连接的管理。中间件对业务服务器提供 SQL 兼容的协议，业务服务器无须自己进行读写分离。
+
+对于业务服务器来说，访问中间件和访问数据库没有区别，事实上在业务服务器看来，中间件就是一个数据库服务器。
+
+其基本架构是：
+
+![数据库中间件](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-f2313613-25bd-4065-8f63-969a4b5757a7.jpg)
+
+### 57.主从复制原理了解吗？
+
+MySQL 的主从复制（Master-Slave Replication）是一种数据同步机制，用于将数据从一个主数据库（master）复制到一个或多个从数据库（slave）。
+
+广泛用于数据备份、灾难恢复和数据分析等场景。
+
+![主从复制](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-1bfbfcb5-2392-4f98-be1b-a66204da09e5.jpg)
+
+复制过程的主要步骤有：
+
+- 在主服务器上，所有修改数据的语句（如 INSERT、UPDATE、DELETE）会被记录到二进制日志中。
+- 主服务器上的一个线程（二进制日志转储线程）负责读取二进制日志的内容并发送给从服务器。
+- 从服务器接收到二进制日志数据后，会将这些数据写入自己的中继日志（Relay Log）。中继日志是从服务器上的一个本地存储。
+- 从服务器上有一个 SQL 线程会读取中继日志，并在本地数据库上执行，从而将更改应用到从数据库中，完成同步。
+
+### 58.主从同步延迟怎么处理？
+
+#### 主从同步延迟的原因
+
+一个服务器开放Ｎ个链接给客户端来连接的，这样有会有大并发的更新操作, 但是从服务器的里面读取 binlog 的线程仅有一个，当某个 SQL 在从服务器上执行的时间稍长 或者由于某个 SQL 要进行锁表就会导致，主服务器的 SQL 大量积压，未被同步到从服务器里。这就导致了主从不一致， 也就是主从延迟。
+
+#### 主从同步延迟的解决办法
+
+解决主从复制延迟有几种常见的方法:
+
+**写操作后的读操作指定发给数据库主服务器**:
+
+例如，注册账号完成后，登录时读取账号的读操作也发给数据库主服务器。这种方式和业务强绑定，对业务的侵入和影响较大，如果哪个新来的程序员不知道这样写代码，就会导致一个 bug。
+
+**读从机失败后再读一次主机**:
+
+这就是通常所说的 "二次读取" ，二次读取和业务无绑定，只需要对底层数据库访问的 API 进行封装即可，实现代价较小，不足之处在于如果有很多二次读取，将大大增加主机的读操作压力。例如，黑客暴力破解账号，会导致大量的二次读取操作，主机可能顶不住读操作的压力从而崩溃。
+
+**关键业务读写操作全部指向主机，非关键业务采用读写分离**:
+
+例如，对于一个用户管理系统来说，注册 + 登录的业务读写操作全部访问主机，用户的介绍、爰好、等级等业务，可以采用读写分离，因为即使用户改了自己的自我介绍，在查询时却看到了自我介绍还是旧的，业务影响与不能登录相比就小很多，还可以忍受。
+
+### 59.你们一般是怎么分库的呢？
+
+分库分表是为了解决单库单表数据量过大导致数据库性能下降的一种解决方案。
+
+分库的策略有两种：
+
+①、垂直分库：按照业务模块将不同的表拆分到不同的库中，例如，用户表、订单表、商品表等分到不同的库中。
+
+![垂直分库](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-2a43af18-617b-4502-b66a-894c2ff4c6c3.jpg)
+
+②、水平分库：按照一定的策略将一个表中的数据拆分到多个库中，例如，按照用户 id 的 hash 值将用户表拆分到不同的库中。
+
+![水平分库](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-debe0fb1-d7f7-4ef2-8c99-13c9377138b6.jpg)
+
+### 60.那你们是怎么分表的？
+
+当单表数据增量过快，业界流传的说法是超过 500 万的数据量就要考虑分表了。
+
+将文章表和文章详情表做了分表处理，因为文章的详情数据量会比较大，而文章的基本信息数据量会比较小。
+
+垂直拆分可以减轻只查询文章基本数据，不需要附带文章详情时的查询压力。
+
+当然了，当表的数据量过大时，仍然要考虑水平分表，将一个表的数据分散到多个表中，以减轻单表的查询压力。
+
+![表拆分](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-7cba6ce0-c8bb-4f51-9c3b-e5a44e724c79.jpg)
+
+比如说我们将文章表拆分成多个表，如 article_0、article_9999、article_19999 等。
+
+#### 常用的分库分表中间件有哪些？
+
+sharding-jdbc
+
+Mycat
+
+### 61.水平分表有哪几种路由方式？
+
+为了实现水平分表，需要设计合适的路由策略来确定数据应该存储在哪个表中，具体哪个表，由分片键（Sharding Key）来决定，分片键的选择应满足以下条件：
+
+- **高区分度**：分片键的值应尽量均匀分布，以避免数据倾斜。
+- **查询频率高**：选择经常在查询条件中使用的字段作为分片键，有助于提高查询效率。
+- **写入频率高**：选择经常被写入的字段，可以均匀分布写入负载。
+
+那常见的路由策略有三种，分别是范围路由、Hash 路由和配置路由。
+
+#### 什么是范围路由？
+
+范围路由是根据某个字段的值范围进行分表。这种方式适用于分片键具有顺序性或连续性的场景。
+
+![范围路由](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-b3882ca3-1d04-44e2-9015-7e6c867255a0.jpg)
+
+范围路由的优点是实现简单，可以随着数据的增加平滑地扩充新的表。适用于按时间或按顺序增长的字段（如时间戳、订单号等）。缺点是可能出现数据倾斜问题，导致某些表的数据量明显大于其他表。
+
+#### 什么是 Hash 路由？
+
+哈希路由是通过对分片键进行哈希计算，然后取模来确定数据存储的表。哈希值决定了数据分布，通常能较好地平衡数据量。
+
+![Hash 路由](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-e01e7757-c337-48c8-95db-2f7cfd2bc036.jpg)
+
+假如我们一开始规划好了 4 个数据表，那么路由算法可以简单地通过取模来实现：
+
+```java
+public String getTableNameByHash(long userId) {
+    int tableIndex = (int) (userId % 4);
+    return "user_" + tableIndex;
+}
+```
+
+哈希路由的优点是数据可以均匀分布，避免了数据倾斜，但范围查询时可能会涉及多个表，性能较差。
+
+#### 什么是配置路由？
+
+配置路由是通过配置表来确定数据存储的表，适用于分片键不规律的场景。
+
+![配置路由](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-fcd34332-d38d-455a-875d-d4afd37cac72.jpg)
+
+比如说我们可以通过 order\_router 表来确定订单数据存储在哪个表中：
+
+| order\_id | table\_id |
+| --- | --- |
+| 1 | table\_1 |
+| 2 | table\_2 |
+| 3 | table\_3 |
+
+配置路由的优点是可以根据实际情况灵活配置。缺点是需要额外的配置表，维护成本较高。
+
+### 62.不停机扩容怎么实现？
+
+实际上，不停机扩容，实操起来是个非常麻烦而且很有风险的操作，当然，面试回答起来就简单很多。
+
+- **第一阶段：在线双写，查询走老库**
+
+1. 建立好新的库表结构，数据写入久库的同时，也写入拆分的新库
+2. 数据迁移，使用数据迁移程序，将旧库中的历史数据迁移到新库
+3. 使用定时任务，新旧库的数据对比，把差异补齐
+
+![扩容](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-2d4d94c9-e816-47fc-93dd-a835b1318099.jpg)
+
+- **第二阶段：在线双写，查询走新库**
+
+1. 完成了历史数据的同步和校验
+2. 把对数据的读切换到新库
+
+![扩容](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-5cf01486-72c1-4eab-9f6e-a19c31569f46.jpg)
+
+- **第三阶段：旧库下线**
+
+1. 旧库不再写入新的数据
+2. 经过一段时间，确定旧库没有请求之后，就可以下线老库
+
+![扩容](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/mysql-a122d6d5-fff2-4ccd-8ddb-a9282eb2e2da.jpg)
+
+### 63.你觉得分库分表会带来什么问题呢？
+
+从分库的角度来讲：
+
+- **事务的问题**
+
+使用关系型数据库，有很大一点在于它保证事务完整性。
+
+而分库之后单机事务就用不上了，必须使用分布式事务来解决。
+
+- **跨库 JOIN 问题**
+
+在一个库中的时候我们还可以利用 JOIN 来连表查询，而跨库了之后就无法使用 JOIN 了。
+
+此时的解决方案就是**在业务代码中进行关联**，也就是先把一个表的数据查出来，然后通过得到的结果再去查另一张表，然后利用代码来关联得到最终的结果。
+
+这种方式实现起来稍微比较复杂，不过也是可以接受的。
+
+还有可以**适当的冗余一些字段**。比如以前的表就存储一个关联 ID，但是业务时常要求返回对应的 Name 或者其他字段。这时候就可以把这些字段冗余到当前表中，来去除需要关联的操作。
+
+还有一种方式就是**数据异构**，通过 binlog 同步等方式，把需要跨库 join 的数据异构到 ES 等存储结构中，通过 ES 进行查询。
+
+从分表的角度来看：
+
+- **跨节点的 count,order by,group by 以及聚合函数问题**
+
+只能由业务代码来实现或者用中间件将各表中的数据汇总、排序、分页然后返回。
+
+- **数据迁移，容量规划，扩容等问题**
+
+数据的迁移，容量如何规划，未来是否可能再次需要扩容，等等，都是需要考虑的问题。
+
+- **ID 问题**
+
+数据库表被切分后，不能再依赖数据库自身的主键生成机制，所以需要一些手段来保证全局主键唯一。
+
+- 还是自增，只不过自增步长设置一下。比如现在有三张表，步长设置为 3，三张表 ID 初始值分别是 1、2、3。这样第一张表的 ID 增长是 1、4、7。第二张表是 2、5、8。第三张表是 3、6、9，这样就不会重复了。
+- UUID，这种最简单，但是不连续的主键插入会导致严重的页分裂，性能比较差。
+- 分布式 ID，比较出名的就是 Twitter 开源的 sonwflake 雪花算法
+
+### 64.百万级别以上的数据如何删除？
+
+关于索引：由于索引需要额外的维护成本，因为索引文件是单独存在的文件,所以当我们对数据的增加,修改,删除,都会产生额外的对索引文件的操作,这些操作需要消耗额外的 IO,会降低增/改/删的执行效率。
+
+所以，在我们删除数据库百万级别数据的时候，查询 MySQL 官方手册得知删除数据的速度和创建的索引数量是成正比的。
+
+1. 所以我们想要删除百万数据的时候可以先删除索引
+2. 然后删除其中无用数据
+3. 删除完成后重新创建索引创建索引也非常快
+
+### 65.百万千万级大表如何添加字段？
+
+当线上的数据库数据量到达几百万、上千万的时候，加一个字段就没那么简单，因为可能会长时间锁表。
+
+大表添加字段，通常有这些做法：
+
+- 通过中间表转换过去
+
+创建一个临时的新表，把旧表的结构完全复制过去，添加字段，再把旧表数据复制过去，删除旧表，新表命名为旧表的名称，这种方式可能回丢掉一些数据。
+
+- 用 pt-online-schema-change
+
+`pt-online-schema-change`是 percona 公司开发的一个工具，它可以在线修改表结构，它的原理也是通过中间表。
+
+- 先在从库添加 再进行主从切换
+
+如果一张表数据量大且是热表（读写特别频繁），则可以考虑先在从库添加，再进行主从切换，切换后再将其他几个节点上添加字段。
+
+### 66.MySQL 数据库 cpu 飙升的话，要怎么处理呢？
+
+排查过程：
+
+（1）使用 top 命令观察，确定是 mysqld 导致还是其他原因。
+
+（2）如果是 mysqld 导致的，show processlist，查看 session 情况，确定是不是有消耗资源的 sql 在运行。
+
+（3）找出消耗高的 sql，看看执行计划是否准确， 索引是否缺失，数据量是否太大。
+
+处理：
+
+（1）kill 掉这些线程 (同时观察 cpu 使用率是否下降)，
+
+（2）进行相应的调整 (比如说加索引、改 sql、改内存参数)
+
+（3）重新跑这些 SQL。
+
+其他情况：
+
+也有可能是每个 sql 消耗资源并不多，但是突然之间，有大量的 session 连进来导致 cpu 飙升，这种情况就需要跟应用一起来分析为何连接数会激增，再做出相应的调整，比如说限制连接数等
